--- a/home.html
+++ b/home.html
@@ -260,6 +260,33 @@
     ]
   },
   {
+    "title": "Một trường sư phạm yêu cầu xét tuyển môn văn ở tất cả các ngành",
+    "content": "Trường Đại học Sư phạm Nghệ thuật Trung ương thông báo tuyển sinh năm 2025 với 1.670 chỉ tiêu, yêu cầu tất cả các ngành phải xét tuyển môn ngữ văn. Thí sinh cần có điểm trung bình môn văn từ 6,5 trở lên trong ba năm học THPT hoặc điểm thi tốt nghiệp môn văn đạt 6,5. Ngoài ra, trường cũng áp dụng các phương thức xét tuyển khác như xét điểm thi tốt nghiệp hoặc học bạ và kết hợp kết quả môn ngữ văn với năng khiếu.",
+    "link": "https://dantri.com.vn/giao-duc/mot-truong-su-pham-yeu-cau-xet-tuyen-mon-van-o-tat-ca-cac-nganh-20250326160048747.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Trường nào yêu cầu xét tuyển môn văn ở tất cả các ngành vào năm 2025?",
+    "answers": [
+      {
+        "text": "Trường Đại học Sư phạm Nghệ thuật Trung ương",
+        "correct": true
+      },
+      {
+        "text": "Trường Đại học Kinh tế Quốc dân",
+        "correct": false
+      },
+      {
+        "text": "Trường Đại học Bách khoa Hà Nội",
+        "correct": false
+      },
+      {
+        "text": "Trường Đại học Ngoại thương",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hỗn chiến làm 1 người chết sau tin nhắn ‘chiều nay đến nhà Hiếu và bị đánh'",
     "content": "Vào chiều 25-3, một vụ hỗn chiến đã xảy ra tại TP Bảo Lộc, Lâm Đồng, dẫn đến cái chết của ông Nguyễn Minh Huyền. Nguyên nhân bắt nguồn từ một mâu thuẫn giữa ông Hưng và ông Hiếu, sau khi ông Hưng bị đánh và thông báo trong nhóm zalo. Ngô Minh Nhật, con trai của ông Hiếu, đã mang dao đến nhà ông Hưng và đâm ông Huyền, dẫn đến cái chết của nạn nhân này. Công an đã tạm giữ 4 nghi phạm và đang tiếp tục điều tra vụ việc.",
     "link": "https://tuoitre.vn/hon-chien-lam-1-nguoi-chet-sau-tin-nhan-chieu-nay-den-nha-hieu-va-bi-danh-20250326154604211.htm",
@@ -816,6 +843,33 @@
     ]
   },
   {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -842,33 +896,6 @@
       },
       {
         "text": "Herbicide D",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
@@ -1268,33 +1295,6 @@
     ]
   },
   {
-    "title": "Dương Hoàng Yến bức xúc vì bị đồn qua đời sau khi liệt dây thần kinh số 7",
-    "content": "Dương Hoàng Yến đã lên tiếng phản đối thông tin sai lệch trên mạng xã hội về việc cô qua đời sau khi bị liệt dây thần kinh số 7. Một fanpage có hơn 300.000 lượt theo dõi đã đăng tải hình ảnh cùng dòng chia sẻ gây sốc, khiến cô cảm thấy bức xúc. Dương Hoàng Yến khẳng định rằng cô vẫn khỏe mạnh và chỉ bị liệt dây thần kinh tạm thời. Cô cũng nhấn mạnh tầm quan trọng của việc chăm sóc sức khỏe và cảnh báo về căn bệnh này.",
-    "link": "https://dantri.com.vn/giai-tri/duong-hoang-yen-buc-xuc-vi-bi-don-qua-doi-sau-khi-liet-day-than-kinh-so-7-20250326115721173.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Dương Hoàng Yến đã phản ứng như thế nào trước tin đồn về việc cô qua đời?",
-    "answers": [
-      {
-        "text": "Cô khẳng định rằng mình vẫn khỏe mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Cô xác nhận rằng mình đã qua đời.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có bất kỳ phản ứng nào.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã viết một bài hát về điều đó.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tắc ruột sau phẫu thuật sa trực tràng",
     "content": "Bài viết đề cập đến trường hợp bệnh nhân 18 tuổi bị tắc ruột sau khi phẫu thuật sa trực tràng. Sau một tuần phẫu thuật, bệnh nhân xuất hiện triệu chứng chướng bụng, xuất huyết tiêu hóa và không thể đi đại tiện. Các bác sĩ đã phát hiện tắc ruột do nhiễm trùng vết mổ và thực hiện các biện pháp can thiệp như nội soi trực tràng và đặt ống thông để cầm máu. Sau điều trị, sức khỏe bệnh nhân đã hồi phục và xuất viện bình thường.",
     "link": "https://vnexpress.net/tac-ruot-sau-phau-thuat-sa-truc-trang-4865977.html",
@@ -1317,6 +1317,33 @@
       },
       {
         "text": "Do di truyền từ gia đình",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dương Hoàng Yến bức xúc vì bị đồn qua đời sau khi liệt dây thần kinh số 7",
+    "content": "Dương Hoàng Yến đã lên tiếng phản đối thông tin sai lệch trên mạng xã hội về việc cô qua đời sau khi bị liệt dây thần kinh số 7. Một fanpage có hơn 300.000 lượt theo dõi đã đăng tải hình ảnh cùng dòng chia sẻ gây sốc, khiến cô cảm thấy bức xúc. Dương Hoàng Yến khẳng định rằng cô vẫn khỏe mạnh và chỉ bị liệt dây thần kinh tạm thời. Cô cũng nhấn mạnh tầm quan trọng của việc chăm sóc sức khỏe và cảnh báo về căn bệnh này.",
+    "link": "https://dantri.com.vn/giai-tri/duong-hoang-yen-buc-xuc-vi-bi-don-qua-doi-sau-khi-liet-day-than-kinh-so-7-20250326115721173.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Dương Hoàng Yến đã phản ứng như thế nào trước tin đồn về việc cô qua đời?",
+    "answers": [
+      {
+        "text": "Cô khẳng định rằng mình vẫn khỏe mạnh.",
+        "correct": true
+      },
+      {
+        "text": "Cô xác nhận rằng mình đã qua đời.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có bất kỳ phản ứng nào.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã viết một bài hát về điều đó.",
         "correct": false
       }
     ]
@@ -2435,37 +2462,6 @@
     ]
   },
   {
-    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
-    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
-    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
-    "answers": [
-      {
-        "text": "60 kg",
-        "correct": true
-      },
-      {
-        "text": "50 kg",
-        "correct": false
-      },
-      {
-        "text": "70 kg",
-        "correct": false
-      },
-      {
-        "text": "40 kg",
-        "correct": false
-      },
-      {
-        "text": "80 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
     "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
     "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
@@ -2515,6 +2511,37 @@
       },
       {
         "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
+    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
+    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
+    "answers": [
+      {
+        "text": "60 kg",
+        "correct": true
+      },
+      {
+        "text": "50 kg",
+        "correct": false
+      },
+      {
+        "text": "70 kg",
+        "correct": false
+      },
+      {
+        "text": "40 kg",
+        "correct": false
+      },
+      {
+        "text": "80 kg",
         "correct": false
       }
     ]
