--- a/home.html
+++ b/home.html
@@ -148,6 +148,60 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nhà hàng cơm niêu từng dính đến Quang Linh Vlogs kêu cứu",
+    "content": "Nhà hàng cơm niêu CKU Linh ở TP.HCM đang gặp khó khăn sau khi bị khách hàng đánh giá 1 sao và chỉ trích nặng nề về chất lượng món ăn cũng như cách phục vụ, do liên quan đến Quang Linh Vlogs. Dù Quang Linh đã rút khỏi nhà hàng, nhưng những phản ứng tiêu cực vẫn không ngừng tăng lên, ảnh hưởng đến hơn 100 nhân viên của nhà hàng. Phía nhà hàng đã lên tiếng cầu cứu, nhấn mạnh rằng họ không liên quan đến những tin đồn và đang chịu tổn thương từ những chỉ trích không công bằng.",
+    "link": "https://tuoitre.vn/nha-hang-com-nieu-tung-dinh-den-quang-linh-vlogs-keu-cuu-20250326133256911.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Nhà hàng CKU Linh đang gặp phải vấn đề gì?",
+    "answers": [
+      {
+        "text": "Đánh giá 1 sao từ khách hàng",
+        "correct": true
+      },
+      {
+        "text": "Chất lượng món ăn tốt",
+        "correct": false
+      },
+      {
+        "text": "Giá cả hợp lý",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ nhanh chóng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hành trình Shopee xây ‘bệ phóng’ đưa hàng Việt vươn xa",
+    "content": "Shopee đang tích cực xây dựng một nền tảng để đưa hàng Việt vươn xa ra thế giới thông qua các sáng kiến như livestream và hợp tác với nông dân. Năm 2024, Shopee đã thành công trong việc kết nối hơn 150 KOL/KOC, giúp tăng trưởng doanh thu cho nhiều doanh nghiệp địa phương. Đặc biệt, chương trình 'Tôn Vinh Nông Sản Việt' đã giúp nông dân cải thiện phương thức canh tác và tăng thu nhập. Hệ sinh thái 'Shopee International Platform' cũng hỗ trợ doanh nghiệp xuất khẩu hàng hóa đến nhiều thị trường quốc tế, góp phần khẳng định giá trị hàng Việt.",
+    "link": "https://tuoitre.vn/hanh-trinh-shopee-xay-be-phong-dua-hang-viet-vuon-xa-20250326174442613.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Shopee đã giúp hàng Việt vươn xa ra thế giới như thế nào?",
+    "answers": [
+      {
+        "text": "Thông qua các sáng kiến livestream và hợp tác với nông dân.",
+        "correct": true
+      },
+      {
+        "text": "Bằng cách giảm giá sản phẩm đến tay người tiêu dùng.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ thông qua quảng cáo truyền thống.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào sự hỗ trợ từ các KOL nổi tiếng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TP.HCM sẽ cắt giảm 30% thủ tục hành chính để hỗ trợ doanh nghiệp",
     "content": "Chủ tịch UBND TP.HCM yêu cầu cắt giảm 30% thủ tục hành chính nhằm giảm chi phí kinh doanh cho doanh nghiệp và người dân. Mỗi cơ quan, đơn vị được giao nhiệm vụ rà soát và đề xuất cắt giảm các thủ tục không cần thiết, đồng thời cải thiện môi trường kinh doanh. Mục tiêu chính là hỗ trợ doanh nghiệp vượt qua khó khăn và tạo nền tảng phát triển lâu dài cho TP.HCM.",
     "link": "https://tuoitre.vn/tp-hcm-se-cat-giam-30-thu-tuc-hanh-chinh-de-ho-tro-doanh-nghiep-20250326173135092.htm",
@@ -210,33 +264,6 @@
     ]
   },
   {
-    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
-    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
-    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
-    "answers": [
-      {
-        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
-        "correct": true
-      },
-      {
-        "text": "Neymar không cần thiết cho đội tuyển.",
-        "correct": false
-      },
-      {
-        "text": "Melo không quan tâm đến Neymar.",
-        "correct": false
-      },
-      {
-        "text": "Brazil không cần thay đổi gì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
     "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
     "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
@@ -259,6 +286,33 @@
       },
       {
         "text": "Không cần thư giãn trước khi ngủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
+    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
+    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
+    "answers": [
+      {
+        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
+        "correct": true
+      },
+      {
+        "text": "Neymar không cần thiết cho đội tuyển.",
+        "correct": false
+      },
+      {
+        "text": "Melo không quan tâm đến Neymar.",
+        "correct": false
+      },
+      {
+        "text": "Brazil không cần thay đổi gì.",
         "correct": false
       }
     ]
@@ -3046,33 +3100,6 @@
     ]
   },
   {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -3099,6 +3126,33 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
@@ -3510,6 +3564,37 @@
     ]
   },
   {
+    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
+    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
+    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
+    "answers": [
+      {
+        "text": "Central Bay tại Eco Central Park",
+        "correct": true
+      },
+      {
+        "text": "Milan Workspace",
+        "correct": false
+      },
+      {
+        "text": "Hanoi Creative Space",
+        "correct": false
+      },
+      {
+        "text": "Saigon Coworking Center",
+        "correct": false
+      },
+      {
+        "text": "Da Nang Office Hub",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiêu cơ vân do tập squat quá sức",
     "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
     "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
@@ -3567,37 +3652,6 @@
       },
       {
         "text": "Bệnh tiểu đường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
-    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
-    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
-    "answers": [
-      {
-        "text": "Central Bay tại Eco Central Park",
-        "correct": true
-      },
-      {
-        "text": "Milan Workspace",
-        "correct": false
-      },
-      {
-        "text": "Hanoi Creative Space",
-        "correct": false
-      },
-      {
-        "text": "Saigon Coworking Center",
-        "correct": false
-      },
-      {
-        "text": "Da Nang Office Hub",
         "correct": false
       }
     ]
@@ -4051,33 +4105,6 @@
     ]
   },
   {
-    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
-    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
-    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
-    "cat": "oto-xe-may",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
-    "answers": [
-      {
-        "text": "Do lái xe với tốc độ cao và không kiểm soát",
-        "correct": true
-      },
-      {
-        "text": "Vì xe điện không an toàn",
-        "correct": false
-      },
-      {
-        "text": "Do đường phố không đủ ánh sáng",
-        "correct": false
-      },
-      {
-        "text": "Vì tài xế không có kinh nghiệm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến phương án sắp xếp phường xã 22 quận huyện của TP HCM",
     "content": "TP HCM đang dự kiến thực hiện phương án sắp xếp lại các phường và xã tại 22 quận huyện, theo đó quận 3 và huyện Hóc Môn có thể trở thành một phường và xã. TP Thủ Đức sẽ chuyển thành 9 phường mới, trong khi nhiều quận nội đô sẽ được tổ chức lại thành 2-3 phường. Mục tiêu của kế hoạch này là giảm số đơn vị hành chính từ 273 xuống còn hơn 80, nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý.",
     "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-22-quan-huyen-cua-tp-hcm-4865782.html",
@@ -4100,6 +4127,33 @@
       },
       {
         "text": "100 phường và xã",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
+    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
+    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
+    "cat": "oto-xe-may",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
+    "answers": [
+      {
+        "text": "Do lái xe với tốc độ cao và không kiểm soát",
+        "correct": true
+      },
+      {
+        "text": "Vì xe điện không an toàn",
+        "correct": false
+      },
+      {
+        "text": "Do đường phố không đủ ánh sáng",
+        "correct": false
+      },
+      {
+        "text": "Vì tài xế không có kinh nghiệm",
         "correct": false
       }
     ]
@@ -4792,37 +4846,6 @@
       },
       {
         "text": "Đàm phán hòa bình với Ukraine",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cường kích Su-25 Nga rơi khi huấn luyện",
-    "content": "Vào ngày 24/3, một chiếc máy bay cường kích Su-25 của Nga đã bị rơi trong khi thực hiện chuyến bay huấn luyện tại vùng Primorsky. Phi công đã kịp thời thoát hiểm và được cứu sống, không có thiệt hại nào trên mặt đất. Nguyên nhân ban đầu được xác định do trục trặc kỹ thuật, và một ủy ban điều tra đã được cử đến hiện trường.",
-    "link": "https://dantri.com.vn/the-gioi/cuong-kich-su-25-nga-roi-khi-huan-luyen-20250325164907444.htm",
-    "cat": "the-gioi",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Vụ rơi máy bay Su-25 của Nga xảy ra ở đâu?",
-    "answers": [
-      {
-        "text": "Vùng Primorsky",
-        "correct": true
-      },
-      {
-        "text": "Vùng Siberia",
-        "correct": false
-      },
-      {
-        "text": "Vùng Moscow",
-        "correct": false
-      },
-      {
-        "text": "Vùng Vladivostok",
-        "correct": false
-      },
-      {
-        "text": "Vùng Tatarstan",
         "correct": false
       }
     ]
